fix(components): CollapsiblePanel - align badge text

--- a/packages/components/src/CollapsiblePanel/CollapsiblePanel.scss
+++ b/packages/components/src/CollapsiblePanel/CollapsiblePanel.scss
@@ -123,6 +123,7 @@ $tc-toggle-color: #555964 !default;
 		white-space: nowrap;
 		text-overflow: ellipsis;
 		overflow: hidden;
+		padding: 0.3em 0.6em;
 	}
 
 	.group {
